# SysPulse

./: .gitignore  README.md  start.sh
Engine/: .gitignore  README.md
Engine/agent/: CMakeLists.txt  main.cpp
Engine/middleware/: package-lock.json  package.json  server.js
Frontend/: .env.local.example  README.md  package-lock.json  package.json
Frontend/src/components/: StatCard.tsx
Frontend/src/lib/: mongodb.ts
Frotnend/: package-lock.json  package.json  tailwind.config.ts
Frotnend/.next/: BUILD_ID  build-manifest.json  fallback-build-manifest.json  prerender-manifest.json  required-server-files.js  required-server-files.json  trace  trace-build
Frotnend/.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
Frotnend/.next/dev/: prerender-manifest.json  trace
Frotnend/.next/dev/cache/: .rscinfo
Frotnend/.next/dev/server/: server-reference-manifest.js  server-reference-manifest.json
Frotnend/.next/dev/server/app/: page_client-reference-manifest.js
Frotnend/.next/server/: middleware-build-manifest.js  server-reference-manifest.js  server-reference-manifest.json
Frotnend/.next/server/app/: _global-error.html  _global-error.rsc  _not-found.rsc  index.html  index.rsc  page.js  page.js.nft.json  page_client-reference-manifest.js
Frotnend/.next/server/pages/: 404.html
Frotnend/.next/static/chunks/: 6dd49dd0b85db12f.css  99694f0b9f1b12be.css  af38b9d6ca226ab4.js  turbopack-faf9ea73869e41ad.js
Frotnend/src/app/: globals.css  layout.tsx  page.tsx
Frotnend/src/components/: LiveChart.tsx  index.ts
Frotnend/src/models/: Alert.ts
(+102 files in other folders)
